test/test_examples/syntactic_examples/syntax_error/error_prologue_02.zig
// Syntax error: first terminal isn't "const"

ifj_program ifj = @import("ifj24.zig"); 

pub fn main() void {

}  